# nextjs-fastapi-postgres-starter

backend/: main.py  models.py  pyproject.toml  schemas.py  seed.py
backend/routers/: messages.py  threads.py  users.py
backend/services/: message_service.py  thread_service.py  user_service.py
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatArea.tsx  ChatContainer.tsx  InputArea.tsx  LoadingSpinner.tsx  Message.tsx  ThreadList.tsx
frontend/components/chat/: ChatArea.tsx  ChatContainer.tsx  InputArea.tsx  Message.tsx  ThreadList.tsx
frontend/components/ui/: LoadingSpinner.tsx
frontend/services/: chatApi.ts
frontend/types/: chat.ts
